# squad-makers-test

./: README.md  main.py  pyproject.toml
db/: conexion.py
db/models/: joke.py
routes/: joke.py  math.py
tests/: test_squad_makers.py
