[tool.poetry]
name = "squad_makers"
version = "0.1.0"
description = ""
authors = ["worozco <worozco@netnovation.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "0.85.0"
uvicorn = {extras = ["standard"], version = "0.18.3"}
requests = "^2.28.1"
pydantic = "^1.10.2"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
